Fix z-index css for biopic, header text

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,136 @@
 * {
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+}
+html,
+body {
+	max-width: 100%;
+}
+body,
+div,
+li,
+h1,
+h2 {
+	padding: 0;
+	margin: 0;
+	font-family: sans-serif;
+	font-weight: lighter;
+}
+h1,
+h2 {
+	font-weight: normal;
+}
+.float-left {
+	float: left;
+}
+.float-right {
+	float: right;
+}
+.clear-both {
+	clear: both;
+}
+
+article {
+	margin: 75px auto;
+	text-align: justify;
+}
+.article-right {
+	max-width: 750px;
+	padding-left: 100px;
+}
+.section {
+	margin: 75px auto 0 auto;
+	max-width: 650px;
+	font-size: 20px;
+	padding: 0 10px;
+	clear: both;
+}
+.section h2 {
+	text-align: center;
+	margin-bottom: 35px;
+}
+.section p {
+	line-height: 25px;
+}
+footer {
+	margin: 10px auto;
+	max-width: 650px;
+	text-align: center;
+}
+.footer-links {
+	list-style-type: none;
+	font-weight: 100;
+}
+.footer-links li {
+	display: inline;
+}
+.footer-links li a {
+	text-decoration: none;
+}
+.footer-links li a:hover {
+	text-decoration: underline;
+}
+.footer-links li::after {
+	content: ' | ';
+}
+.footer-links li:last-of-type::after {
+	content: '';
+}
+#biopic {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	z-index: -4;
+}
+#biopic img {
+	max-width: 100vw;
+	opacity: 0.33;
+	filter: invert(100%);
+	z-index: -4;
+}
+
+@media screen and (max-width: 475px) {
+	.header-links ul {
+		margin-top: 0;
+	}
+	.header-links ul:first-child {
+		text-align: right;
+		padding-right: calc(30px + 1vw);
+	}
+	.header-links ul:last-child {
+		text-align: left;
+		padding-left: calc(30px + 1vw);
+	}
+	.pagehead-wrap {
+		margin-top: 125px;
+	}
+	.title {
+		font-size: 45px;
+		line-height: 45px;
+		padding-top: 40px;
+	}
+	.subtitle {
+		top: 0px;
+		left: 0;
+	}
+	.biopic {
+		width: 33%;
+		position: relative;
+		left: calc(50vw - 16.5%);
+		float: none;
+	}
+	footer {
+		position: static;
+		bottom: auto;
+		padding-top: 25px;
+		height: 400px;
+	}
+	.footer-box {
+		width: auto;
+	}
+}
+
+* {
   -ms-box-sizing: border-box;
   box-sizing: border-box;
 }
@@ -61,7 +193,6 @@ h1, h2 {
   width: 100vw;
   background-color: #736983;
   opacity: 0.9;
-  z-index: -1;
 }
 
 .header-img {
@@ -70,7 +201,6 @@ h1, h2 {
   top: 0;
   width: 100vw;
   background: url('../images/focus-big.jpg') center center no-repeat;
-  z-index: -1;
 }
 
 .header-color, .header-img {
@@ -139,12 +269,18 @@ h1, h2 {
   color: #d3d3d3;
 }
 
+#content {
+  z-index: 1;
+}
+
 .pagehead-wrap {
   text-align: justify;
   max-width: 968px;
   margin: 0 auto;
   margin-top: 200px;
   text-align: center;
+  z-index: 100;
+  position: relative;
 }
 
 article {
@@ -180,6 +316,7 @@ article {
   width: 100%;
   padding: 5px 0;
   z-index: 100;
+  position: relative;
 }
 
 #lang-list {
